[gd_scene load_steps=19 format=3 uid="uid://khvw6nmpgkso"]

[ext_resource type="Script" path="res://Scenes/general_page.gd" id="1_8e7xa"]
[ext_resource type="Theme" uid="uid://2643a6p0thsb" path="res://Assets/Themes/option_menu_theme.tres" id="2_12pew"]
[ext_resource type="FontFile" uid="uid://dnonecwhtho3d" path="res://Assets/Fonts/Roboto-Bold.ttf" id="2_54yt6"]
[ext_resource type="StyleBox" uid="uid://c3nl2fr2yle2k" path="res://Assets/Styles/blue_button.tres" id="2_d0ij6"]
[ext_resource type="StyleBox" uid="uid://sj4sw626k6fa" path="res://Assets/Styles/hover_button.tres" id="3_5kltr"]
[ext_resource type="StyleBox" uid="uid://dd5xkjppnprpd" path="res://Assets/Styles/pressed_button.tres" id="4_bc41n"]
[ext_resource type="StyleBox" uid="uid://cc3y63knchcv3" path="res://Assets/Styles/white_back_blue_borders.tres" id="6_m0buh"]
[ext_resource type="StyleBox" uid="uid://bv1o2ciq0ndps" path="res://Assets/Styles/white_back_red_borders.tres" id="7_qox5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4q6hg"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.552941, 0.686275, 0.811765, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6vtlf"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_21873"]
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8oyx"]

[sub_resource type="LabelSettings" id="LabelSettings_6g5hm"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uple4"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.439216, 0.690196, 0.788235, 1)
corner_radius_top_right = 50
corner_radius_bottom_right = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_etuq4"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.686275, 0.827451, 0, 1)
corner_radius_top_right = 50
corner_radius_bottom_right = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p6aco"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ppd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mc74"]

[node name="GeneralPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8e7xa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4q6hg")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/Left"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Left/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="HSplitContainer/Left/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Вывод основной информации по таблицам"
label_settings = SubResource("LabelSettings_6vtlf")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/Left/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_21873")

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Left/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Output" type="RichTextLabel" parent="HSplitContainer/Left/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("2_54yt6")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_n8oyx")
bbcode_enabled = true
fit_content = true
shortcut_keys_enabled = false

[node name="Right" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/Right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Right/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Выберите таблицу"
label_settings = SubResource("LabelSettings_6g5hm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Tables" type="ItemList" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hovered_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/panel = ExtResource("2_d0ij6")
theme_override_styles/focus = ExtResource("2_d0ij6")
theme_override_styles/hovered = SubResource("StyleBoxFlat_uple4")
theme_override_styles/selected = SubResource("StyleBoxFlat_etuq4")
theme_override_styles/selected_focus = SubResource("StyleBoxFlat_etuq4")
auto_height = true

[node name="Label2" type="Label" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Поиск деревьев по критериям.
Критерии:"
label_settings = SubResource("LabelSettings_6g5hm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Сriterion" type="OptionButton" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_12pew")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_p6aco")
theme_override_styles/normal = ExtResource("2_d0ij6")
theme_override_styles/hover = ExtResource("3_5kltr")
theme_override_styles/pressed = ExtResource("4_bc41n")
item_count = 5
popup/item_0/text = "Вид дерева"
popup/item_0/id = 0
popup/item_1/text = "Номер насаждения"
popup/item_1/id = 1
popup/item_2/text = "Дата посадки"
popup/item_2/id = 2
popup/item_3/text = "Дата вырубки"
popup/item_3/id = 3
popup/item_4/text = "Координаты"
popup/item_4/id = 4

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("6_m0buh")
theme_override_styles/focus = ExtResource("7_qox5a")
placeholder_text = "Введите информацию для поиска"
caret_blink = true

[node name="Button" type="Button" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("2_d0ij6")
theme_override_styles/hover = ExtResource("3_5kltr")
theme_override_styles/pressed = ExtResource("4_bc41n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ppd0")
text = "Поиск"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mc74")

[node name="Exit" type="Button" parent="HSplitContainer/Right/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("2_d0ij6")
theme_override_styles/hover = ExtResource("3_5kltr")
theme_override_styles/pressed = ExtResource("4_bc41n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ppd0")
text = "В админку"

[connection signal="item_selected" from="HSplitContainer/Right/MarginContainer/VBoxContainer/Tables" to="." method="_on_tables_item_selected"]
[connection signal="gui_input" from="HSplitContainer/Right/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="pressed" from="HSplitContainer/Right/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="HSplitContainer/Right/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_up"]
